base/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
  namespace: 5stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: 5stack-web
                    operator: In
                    values:
                      - 'true'
      containers:
        - image: ghcr.io/5stackgg/web:latest
          name: web
          ports:
            - containerPort: 3000
