base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: 5stack
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: web
