base/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: web
  namespace: 5stack
spec:
  ingressClassName: nginx
  rules:
    - host: 5stack.gg
      http:
        paths:
          - backend:
              service:
                name: web
                port:
                  number: 3000
            path: /(.*)
            pathType: Prefix
